--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,17 +1,20 @@
 {% extends "core/base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-    <div class="block">
-        <p class="greetings">
-            Hello World!
-        </p>
-        <p>
-            (Wide Web)
-        </p>
-    </div>
-    <div class="message">
-        <p>If you are seeing this message, it means I finally
-        started working on my website. Well, some 'work in progress' static page.
-        <br><br>Come back soon for updates!</p>
+    <div id="content">
+        <div id="welcome-title">
+            <p class="greetings">
+                Hello World!
+            </p>
+            <p class="greetings">
+                (Wide Web)
+            </p>
+        </div>
+
+        <div id="welcome-message">
+            <p>If you are seeing this message, it means I finally
+            started working on my website. Well, some 'work in progress' page.
+                <br><br>Track my progress on <a href="https://github.com/sammonsg/personal_site">Github</a>!</p>
+        </div>
     </div>
 {% endblock %}
