--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -1,13 +1,11 @@
 {% load staticfiles %}
-<footer>
-    <div id="footer-box">
-        <section id="networks">
-            <a href="https://github.com/sammonsg">
-                <img class="footer-icon" src="{% static 'library/images/GitHub-Mark-120px-plus.png' %}"  />
-            </a>
-            <a href="https://www.linkedin.com/in/giacomo-sammons">
-                <img class="footer-icon" src="{% static 'library/images/In-White-128px-R.png' %}"  />
-            </a>
-        </section>
-    </div>
-</footer>
+<section id="footer-box">
+    <section id="networks">
+        <a href="https://github.com/sammonsg">
+            <img class="footer-icon" src="{% static 'library/images/GitHub-Mark-120px-plus.png' %}"  />
+        </a>
+        <a href="https://www.linkedin.com/in/giacomo-sammons">
+            <img class="footer-icon" src="{% static 'library/images/In-White-128px-R.png' %}"  />
+        </a>
+    </section>
+</section>
