--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -6,7 +6,7 @@
             <p class="greetings">
                 Hello World!
             </p>
-            <p class="greetings">
+            <p class="greetings" style="font-size: 60%">
                 (Wide Web)
             </p>
         </div>
