--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -1,42 +1,48 @@
-* {margin:0; padding:0}
+body
+{
+    font-family: 'Helvetica Neue','Roboto Slab', 'Roboto', 'Lato', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
 
-#clearer {clear:both;}
+}
 
-
-
-
-body{
-    font-family: "Helvetica";
-    font-weight: lighter;
+html, body{
     height: 100%;
-
+    margin: 0;
+    padding: 0;
 }
 
-#content{
-    background: linear-gradient(to bottom right, #9dffbb, yellow);
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    padding: 60px;
+#doc{
+    min-height: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: linear-gradient(to bottom right, deepskyblue, yellow);
 }
 
-p.greetings{
-    margin: 0px;
-}
 
 #welcome-title{
     font-size: 500%;
-    padding: 50px;
+    padding: 20px;
+}
+
+.greetings{
+    margin: 50px;
 }
 
 #welcome-message{
     text-align: center;
-    margin: 10px 20%;
+    padding: 20px 20%;
 }
+
+
 
 #footer-box{
     background-color: #1b1e21;
-    margin-bottom: 0px;
+    height: 50px;
+    flex: 0;
+    flex-direction: column;
 }
 
 .footer-icon{
@@ -46,7 +52,14 @@ p.greetings{
 }
 
 #networks{
-    padding: 5px 3%;
+    padding: 4px 3%;
     text-align: right;
 }
 
+#content{
+    flex: 1;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+}
