--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -1,11 +1,9 @@
 {% load staticfiles %}
-<section id="footer-box">
-    <section id="networks">
-        <a href="https://github.com/sammonsg">
-            <img class="footer-icon" src="{% static 'library/images/GitHub-Mark-120px-plus.png' %}"  />
-        </a>
-        <a href="https://www.linkedin.com/in/giacomo-sammons">
-            <img class="footer-icon" src="{% static 'library/images/In-White-128px-R.png' %}"  />
-        </a>
-    </section>
+<section id="footer-networks">
+    <a href="https://github.com/sammonsg">
+        <img class="footer-icon" src="{% static 'library/images/GitHub-Mark-120px-plus.png' %}"  />
+    </a>
+    <a href="https://www.linkedin.com/in/giacomo-sammons">
+        <img class="footer-icon" src="{% static 'library/images/In-White-128px-R.png' %}"  />
+    </a>
 </section>
