--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,20 +1,12 @@
 {% extends "core/base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-    <div id="content">
-        <div id="welcome-title">
-            <p class="greetings">
-                Hello World!
-            </p>
-            <p class="greetings" style="font-size: 60%">
-                (Wide Web)
-            </p>
-        </div>
-
-        <div id="welcome-message">
-            <p>If you are seeing this message, it means I finally
-            started working on my website. Well, some 'work in progress' page.
-                <br><br>Track my progress on <a href="https://github.com/sammonsg/personal_site">Github</a>!</p>
-        </div>
+    <div id="menu-bar">
+        {% include "core/menu.html" %}
+    </div>
+    <div id="test-content">
+        <p>
+            wassup
+        </p>
     </div>
 {% endblock %}
