--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -12,25 +12,17 @@ html, body{
     padding: 0;
 }
 
-#menu-bar{
-    width:200px;
-    background: red;
-    float: left;
-}
-
-#test-content{
-    float: right;
-    width:80%;
-    background: blue;
-}
-
 #welcome-page{
+    min-height: 100%;
+    background: linear-gradient(to bottom right, rgb(250, 114, 104), yellow);
+}
+
+#doc{
     min-height: 100%;
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: linear-gradient(to bottom right, rgb(250, 114, 104), yellow);
 }
 
 
